# hw_cloud_client

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  gameclient.sh  start.sh
demo_for_c++/: gameclient.bat
demo_for_c++/project/VS2005/: client.sln  client.vcproj
demo_for_c++/project/VS2010/: client.sln  client.vcxproj  client.vcxproj.filters
demo_for_c++/project/VS2013/: AI.h  client.sln  client.vcxproj  client.vcxproj.filters
demo_for_c++/project/VS2013/Debug/: client.ilk  vc141.idb
demo_for_c++/project/VS2013/Debug/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
demo_for_c++/project/client_cpp/: client_cpp.cpp  client_cpp.vcxproj  client_cpp.vcxproj.filters
demo_for_c++/source/: AI.cpp  AI.h  core.h  message.cpp  message.h  socketClient.cpp  socketClient.h
include/: cJSON.h  message.h
src/: main.cpp  message.cpp
